--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <title></title>
+  <title>HsuDDfps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="https://fav.farm/🖥️" type="image/x-icon">
   <style>
     body {
       background-color: #111;
