--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     h1 {
       font-size: 2rem;
       margin: 0;
+      font-weight: bold;
     }
     .subtitle {
-      font-size: 1rem;
+      font-size: 1.25rem;
       margin-top: 0.5rem;
       color: #fff;
+      font-weight: 500;
     }
     .timestamp {
       color: #888;
@@ -41,7 +43,8 @@
     }
     .button {
       padding: 0.75rem 1.5rem;
-      font-size: 1rem;
+      font-size: 1.05rem;
+      font-weight: bold;
       color: #fff;
       background-color: #6dcff4;
       border: none;
@@ -49,6 +52,7 @@
       cursor: pointer;
       text-decoration: none;
       transition: background-color 0.2s ease;
+      text-shadow: 0 0 3px #005d7e;
     }
     .button:hover {
       background-color: #4ebbdc;
