--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       font-size: 1.8rem;
       margin-top: 0.5rem;
       color: #fff;
-      font-weight: 500;
+      font-weight: bold;
     }
     .timestamp {
       color: #888;
