--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 
   <div class="button-container">
     <button class="button" onclick="copyDiscord()">Add me on Discord</button>
-    <a class="button" href="https://status.hsuddfps.com/" target="_blank">
-      小徐麥塊伺服器連線狀態查詢
-    </a>
+    <a class="button" href="https://status.hsuddfps.com/" target="_blank">小徐麥塊伺服器連線狀態查詢</a>
+    <a class="button" href="https://spotify.hsuddfps.com/" target="_blank">徐滴滴專屬 Spotify 歌單</a>
   </div>
+
   <div class="notification" id="notification">
     已複製 HsuDDfps 的 Discord ID，請前往 Discord 加為好友！
   </div>
