--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <div class="timestamp" id="timestamp"></div>
 
   <div class="button-container">
-    <button class="button" onclick="copyDiscord()">Add me on Discord</button>
+    <button class="button" onclick="copyDiscord()">在 Discord 上添加我為好在</button>
     <a class="button" href="https://status.hsuddfps.com/" target="_blank">小徐麥塊伺服器連線狀態查詢</a>
     <a class="button" href="https://spotify.hsuddfps.com/" target="_blank">徐滴滴專屬 Spotify 歌單</a>
   </div>
