--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <title>HsuDDfps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="https://fav.farm/🖥️" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #111;
+      background-image: url("Index_BG.jpg");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       color: #fff;
-      font-family: "Arial", sans-serif;
+      font-family: "Poppins", sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -17,58 +22,100 @@
       height: 100vh;
       margin: 0;
       text-align: center;
+      overflow: hidden;
     }
+
+    .header-box {
+      background: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      padding: 2rem 3rem;
+      border-radius: 1.5rem;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
+      margin-bottom: 2rem;
+      animation: fadeInUp 1s ease-out;
+    }
+
     h1 {
-      font-size: 2rem;
+      font-size: 2.2rem;
       margin: 0;
-      font-weight: bold;
+      font-weight: 800;
     }
+
     .subtitle {
-      font-size: 1.8rem;
-      margin-top: 0.5rem;
-      color: #fff;
-      font-weight: bold;
+      font-size: 1.6rem;
+      margin-top: 0.8rem;
+      font-weight: 600;
     }
+
     .timestamp {
-      color: #888;
-      font-size: 0.9rem;
-      margin-top: 0.5rem;
+      color: #ccc;
+      font-size: 1rem;
+      margin-top: 0.6rem;
+      font-weight: 400;
     }
+
     .button-container {
-      margin-top: 2rem;
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
       justify-content: center;
+      animation: fadeIn 1.2s ease-in;
     }
+
     .button {
-      padding: 0.75rem 1.5rem;
-      font-size: 1.05rem;
-      font-weight: bold;
+      padding: 0.8rem 1.6rem;
+      font-size: 1rem;
+      font-weight: 600;
       color: #fff;
       background-color: #6dcff4;
       border: none;
       border-radius: 999px;
       cursor: pointer;
       text-decoration: none;
-      transition: background-color 0.2s ease;
+      transition: all 0.3s ease;
       text-shadow: 0 0 3px #005d7e;
     }
+
     .button:hover {
       background-color: #4ebbdc;
+      transform: scale(1.05);
     }
+
     .notification {
       margin-top: 1rem;
-      font-size: 0.9rem;
+      font-size: 0.95rem;
       color: #8f8;
       display: none;
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
     }
   </style>
 </head>
 <body>
-  <h1>此網域為 HsuDDfps 所有</h1>
-  <div class="subtitle">歡迎有 DNS 掛載需求與我聯絡！</div>
-  <div class="timestamp" id="timestamp"></div>
+  <div class="header-box">
+    <h1>此網域為 HsuDDfps 所有</h1>
+    <div class="subtitle">歡迎有 DNS 掛載需求與我聯絡！</div>
+    <div class="timestamp" id="timestamp"></div>
+  </div>
 
   <div class="button-container">
     <button class="button" onclick="copyDiscord()">在 Discord 上新增我為好友</button>
@@ -77,7 +124,7 @@
   </div>
 
   <div class="notification" id="notification">
-    已複製 HsuDDfps 的 Discord ID，請前往 Discord 加為好友！
+    ✅ 已複製 HsuDDfps 的 Discord ID，請前往 Discord 加為好友！
   </div>
 
   <script>
