--- a/index.html
+++ b/index.html
@@ -5,127 +5,90 @@
   <title>HsuDDfps</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="https://fav.farm/🖥️" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #111;
-      background-image: url("Index_BG.jpg");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
       color: #fff;
-      font-family: "Poppins", sans-serif;
+      font-family: "Arial", sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
+      justify-content: flex-start;
+      min-height: 100vh;
       margin: 0;
       text-align: center;
-      overflow: hidden;
     }
-
-    .header-box {
-      background: rgba(0, 0, 0, 0.4);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
-      padding: 2rem 3rem;
-      border-radius: 1.5rem;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.6);
-      margin-bottom: 2rem;
-      animation: fadeInUp 1s ease-out;
-    }
-
     h1 {
-      font-size: 2.2rem;
+      font-size: 2rem;
       margin: 0;
-      font-weight: 800;
+      font-weight: bold;
     }
-
     .subtitle {
-      font-size: 1.6rem;
-      margin-top: 0.8rem;
-      font-weight: 600;
+      font-size: 1.8rem;
+      margin-top: 0.5rem;
+      color: #fff;
+      font-weight: bold;
     }
-
     .timestamp {
-      color: #ccc;
-      font-size: 1rem;
-      margin-top: 0.6rem;
-      font-weight: 400;
+      color: #888;
+      font-size: 0.9rem;
+      margin-top: 0.5rem;
     }
-
     .button-container {
+      margin-top: 2rem;
       display: flex;
       gap: 1rem;
       flex-wrap: wrap;
       justify-content: center;
-      animation: fadeIn 1.2s ease-in;
     }
-
     .button {
-      padding: 0.8rem 1.6rem;
-      font-size: 1rem;
-      font-weight: 600;
+      padding: 0.75rem 1.5rem;
+      font-size: 1.05rem;
+      font-weight: bold;
       color: #fff;
       background-color: #6dcff4;
       border: none;
       border-radius: 999px;
       cursor: pointer;
       text-decoration: none;
-      transition: all 0.3s ease;
+      transition: background-color 0.2s ease;
       text-shadow: 0 0 3px #005d7e;
     }
-
     .button:hover {
       background-color: #4ebbdc;
-      transform: scale(1.05);
     }
-
     .notification {
       margin-top: 1rem;
-      font-size: 0.95rem;
+      font-size: 0.9rem;
       color: #8f8;
       display: none;
     }
-
-    @keyframes fadeInUp {
-      from {
-        opacity: 0;
-        transform: translateY(30px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
+    footer {
+      margin-top: 80px;
+      font-size: 0.9rem;
+      color: #888;
+      padding-bottom: 30px;
     }
   </style>
 </head>
 <body>
-  <div class="header-box">
-    <h1>此網域為 HsuDDfps 所有</h1>
-    <div class="subtitle">歡迎有 DNS 掛載需求與我聯絡！</div>
-    <div class="timestamp" id="timestamp"></div>
-  </div>
+  <h1>此網域為 HsuDDfps 所有</h1>
+  <div class="subtitle">歡迎有 DNS 掛載需求與我聯絡！</div>
+  <div class="timestamp" id="timestamp"></div>
 
   <div class="button-container">
-    <button class="button" onclick="copyDiscord()">在 Discord 上新增我為好友</button>
+    <button class="button" onclick="copyDiscord()">Add me on Discord</button>
     <a class="button" href="https://status.hsuddfps.com/" target="_blank">小徐麥塊伺服器連線狀態查詢</a>
-    <a class="button" href="https://spotify.hsuddfps.com/" target="_blank">徐滴滴專屬 Spotify 歌單</a>
+    <a class="button" href="https://spotify.hsuddfps.com/" target="_blank">徐滴滴專屬歌單</a>
   </div>
 
   <div class="notification" id="notification">
-    ✅ 已複製 HsuDDfps 的 Discord ID，請前往 Discord 加為好友！
+    已複製 HsuDDfps 的 Discord ID，請前往 Discord 加為好友！
   </div>
+
+  <footer>
+    Powered by HsuDD © 2025
+  </footer>
 
   <script>
     function updateTimestamp() {
