--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <style>
     body {
       background-color: #111;
-      background-image: url("Index_BG.jpg");
+      background-image: url("/Index_BG.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
