--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
   <div class="button-container">
     <button class="button" onclick="copyDiscord()">在 Discord 上新增我為好友</button>
-    <a class="button" href="https://status.hsuddfps.com/" target="_blank">小徐麥塊伺服器連線狀態查詢</a>
+    <a class="button" href="https://status.hsuddfps.com/" target="_blank">徐滴滴麥塊伺服器狀態</a>
     <a class="button" href="https://spotify.hsuddfps.com/" target="_blank">徐滴滴專屬 Spotify 歌單</a>
   </div>
 
